--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,6 +26,9 @@
             <div class="drop-zone" id="drop-zone">
                 <p>Merci de vous connecter pour accéder au contenu personnalisé.<br>
                     Si vous n'avez pas de compte, veuillez contacter l'administrateur.</p>
+                {% if message %}
+                    <p style="color: red;font-weight: bolder;font-size: 130%;">{{ message }}</p>
+                {% endif %}
                 <form method="post" action="{{ url_for('login') }}">
                     <div class="form-group">
                         <div class="etiquette">
